css/logger.css
.theme-dark {
    --accent-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l));
    --color-dull: hsla(240deg 19% 19%/50%);
    --color-dullish: hsla(240deg 15% 35%/50%);
    --color-highlight: hsla(0deg 0% 40% /50%);
    --color-text-highlight: hsla(0deg 10% 100% /100%);
    --color-active: hsla(0deg 0% 10% /60%);
    --color-text-active: hsla(0deg 10% 100% /50%);
}

.theme-light {
    --accent-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l));
    --accent-color-dull: hsl(var(--accent-h) 50% var(--accent-l));
    --color-text: hsla(0deg 0% 0% /60%);
    --color-dull: hsla(0deg 0% 90% /50%);
    --color-dullish: hsla(0deg 0% 30% /40%);
    --color-highlight: hsla(0deg 40% 99% /50%);
    --color-text-highlight: hsla(0deg 40% 0% /50%);
    --color-active: hsla(0deg 0% 60% /50%);
    --color-text-active: hsla(0deg 0% 100% /50%);
}

/* ==========================================================================
   LOGGER
   ==========================================================================
*/

.logger .hidden { display: none; }

.logger .modal-close-button { display: none; }

.logger .modal {
    background: var(--accent-color);
    border: none;
    border-radius: 13px;
    min-width: 324px;
    padding: 0;
    width: 324px;
}

.logger .accent-content {
    border-radius: 6px 6px 0 0;
    margin: 0 auto;
    max-height: 500px;
    overflow: auto;
    width: calc(100% - 10px);
}

.logger .accent-div {
    background: var(--color-dull);
    border-radius: inherit;
    display: flex;
    flex-direction: column;
    max-height: inherit;
    max-width: inherit;
    min-height: inherit;
    overflow: auto;
    position: inherit;
    width: inherit;
}

.logger .title-bar {
    color: var(--color-text);
    display: flex;
    height: 35px;
    padding: 0 18px;
}

.logger .title-bar-label {
    display: flex;
    height: inherit;
    width: 95%;
}

.logger .title-bar-label-text::before {
    content: "save to: ";
    padding-right: 5px;
}

.logger .title-bar-icon {
    align-items: center;
    display: flex;
    height: inherit;
    margin: 1px 8px 0 0;
}

.logger .title-bar-label-text {
    align-items: center;
    display: flex;
    height: inherit;
    margin: 0 2px 0 0;
}

.logger .logger-close-button {
    align-items: center;
    display: flex;
    height: 22px;
    justify-content: flex-end;
    margin: auto 0 auto 4px;
    padding-top: 1px;
    width: 5%;
}

.logger .content-section {
    background: var(--modal-background);
    padding: 10px 14px 8px;
}

.logger .new-field-icons {
    color: var(--modal-border);
    display: flex;
    position: absolute;
    right: 6px;
    top: 6px;
}

.logger .trash-icon,
.logger .add-icon { margin: 0 2px 0 5px; }

.logger .new-field-input-container,
.logger .field-div {
    align-items: center;
    border: 1px solid var(--modal-border-color);
    border-radius: var(--input-radius);
    color: var(--nav-item-color);
    display: flex;
    width: 100%;
}

.logger .content-section .field-div {
    margin-top: 10px;
    position: relative;
}

.logger .new-field-input:active,
.logger .new-field-input:focus { box-shadow: 0 0 0 2px hsl(var(--accent-h) var(--accent-s) var(--accent-l) / 50%); }

.logger .datetime-section {
    border: 1px solid var(--modal-border-color);
    border-radius: var(--input-radius);
    color: var(--nav-item-color);
    display: flex;
    height: 32px;
    margin-top: 10px;
}

.logger input[type='text'] {
    background: none;
    border: none;
    color: var(--nav-item-color);
    width: 100%;
}

.logger .content-div textarea {
    background: none;
    border: 1px solid var(--modal-border-color);
    border-radius: var(--input-radius);
    color: var(--nav-item-color);
    height: 100px;
    margin-top: 10px;
    max-height: 400px;
    max-width: 100%;
    min-height: 100px;
    min-width: 100%;
    width: 100%;
}

.logger .datetime-section input[type="text"] {
    background: none;
    border: none;
    color: var(--nav-item-color);
    outline: none;
    padding: 0;
    width: 58%;
}

.logger .date-section {
    border-right: 1px solid var(--modal-border-color);
    height: 100%;
    width: 50%;
}

.logger .time-section {
    display: flex;
    height: 100%;
    justify-content: flex-end;
    width: 50%;
}


.logger .date-section,
.logger .time-section {
    align-items: center;
    display: flex;
    flex-direction: row;
    font-family: monospace;
    justify-content: center;
}

.logger .time-section input[type="text"] { width: 80px; }

.logger .date-section input[type="text"] { width: 95px; }

.logger .date-section input[type="text"]:active,
.logger .time-section input[type="text"]:active,
.logger .date-section input[type="text"]:focus,
.logger .time-section input[type="text"]:focus { box-shadow: none; }

.logger textarea::placeholder,
.logger input[type='text']::placeholder { color: var(--modal-border-color); }

.logger .submit-bar {
    background-color: var(--modal-background);
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top: 1px solid var(--modal-border-color);
    bottom: 0;
    display: flex;
    justify-content: flex-end;
    margin: 0 auto 5px;
    padding: 14px;
    position: sticky;
    width: calc(100% - 10px);
}

.logger .location-container {
    align-items: center;
    display: flex;
}

.logger .location-icon {
    align-items: center;
    border-radius: var(--input-radius);
    display: flex;
    height: 28px;
    justify-content: center;
    width: 30px;
}

.logger .log-choice-container {
    align-items: center;
    background-color: var(--accent-color);
    border-radius: var(--input-radius);
    box-shadow: var(--input-shadow);
    color: var(--color-text);
    display: flex;
    font-family: inherit;
    font-size: var(--font-ui-small);
    height: 30px;
    outline: none;
    width: max-content;
}
/* ... */

